--- a/CountOfVowels.html
+++ b/CountOfVowels.html
@@ -27,7 +27,7 @@
           count = count + 1;
         }
       }
-      console.log(count);
+      console.log(count); // output : 2
     </script>
   </body>
 </html>
